KSENROLL-4655 GPAForCoursesTermResolver and test
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@53507 0ac02d80-fb3f-11dc-a574-c57244a850eb