@@ -17,8 +17,17 @@ package org.kuali.student.krms.termresolver;
 
 import org.kuali.rice.krms.api.engine.TermResolutionException;
 import org.kuali.rice.krms.api.engine.TermResolver;
+import org.kuali.student.enrollment.academicrecord.dto.GPAInfo;
 import org.kuali.student.enrollment.academicrecord.dto.StudentCourseRecordInfo;
 import org.kuali.student.enrollment.academicrecord.service.AcademicRecordService;
+import org.kuali.student.krms.util.KSKRMSExecutionUtil;
+import org.kuali.student.r2.common.dto.ContextInfo;
+import org.kuali.student.r2.common.exceptions.DoesNotExistException;
+import org.kuali.student.r2.common.exceptions.InvalidParameterException;
+import org.kuali.student.r2.common.exceptions.MissingParameterException;
+import org.kuali.student.r2.common.exceptions.OperationFailedException;
+import org.kuali.student.r2.common.exceptions.PermissionDeniedException;
+import org.kuali.student.r2.common.util.constants.AcademicRecordServiceConstants;
 import org.kuali.student.r2.core.constants.KSKRMSServiceConstants;
 
 import java.util.Collections;
@@ -64,15 +73,17 @@ public class GPAForCoursesTermResolver implements TermResolver<Float> {
 
     @Override
     public Float resolve(Map<String, Object> resolvedPrereqs, Map<String, String> parameters) throws TermResolutionException {
+        ContextInfo context = (ContextInfo) resolvedPrereqs.get(KSKRMSServiceConstants.TERM_PREREQUISITE_CONTEXTINFO);
         //Retrieve the completed course records from cluset.
         List<StudentCourseRecordInfo> studentCourseRecordInfoList = this.getCourseRecordsForCourseSetTermResolver().resolve(resolvedPrereqs, parameters);
         Float result = null;
         if(studentCourseRecordInfoList.size() > 0){
-            result = new Float(0);
-            for (StudentCourseRecordInfo si : studentCourseRecordInfoList) {
-                result += Float.parseFloat(si.getCalculatedGradeValue());
+            try {
+                GPAInfo gpa = academicRecordService.calculateGPA(studentCourseRecordInfoList, AcademicRecordServiceConstants.ACADEMIC_RECORD_CALCULATION_GPA_TYPE_KEY, context);
+                result = Float.valueOf(gpa.getValue());
+            } catch (Exception e) {
+                KSKRMSExecutionUtil.convertExceptionsToTermResolutionException(parameters, e, this);
             }
-            result = result/studentCourseRecordInfoList.size();
         }
         return result;
     }
